Thu Mar 17 18:39:04 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_inject): Implement the specialized code for sum of
	  integers including Bignums.

	* internal.h (rb_fix_plus): Declared to be usable from enum_inject.

	* numeric.c (rb_fix_plus): Defined.

Thu Mar 17 17:20:28 2016  Anton Davydov  <antondavydov.o@gmail.com>

	* thread_sync.c: [DOC] Update documentation for Queue class
	  description.  [Fix GH-1292]

Thu Mar 17 17:14:51 2016  Dinar Valeev  <dvaleev@suse.com>

	* gc.c (tick): Use __builtin_ppc_get_timebase for POWER arch.
	  [Fix GH-1291]

Thu Mar 17 11:51:48 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/securerandom.rb (gen_random): to avoid blocking on Windows.
	  On Windows OpenSSL RAND_bytes (underlying implementation is
	  RAND_poll in crypto/rand/rand_win.c) may be blocked at
	  NetStatisticsGet.
	  https://wiki.openssl.org/index.php/Random_Numbers#Windows_Issues
	  Instead of this, use Random.raw_seed directory (whose implementation
	  CryptGenRandom is one of the source of
	  entropy of RAND_poll on Windows).
	  https://wiki.openssl.org/index.php/Random_Numbers
	  Note: CryptGenRandom function is PRNG and doesn't check its entropy,
	  so it won't block. [Bug #12139]
	  https://msdn.microsoft.com/ja-jp/library/windows/desktop/aa379942.aspx
	  https://tools.ietf.org/html/rfc4086#section-7.1.3
	  https://eprint.iacr.org/2007/419.pdf
	  http://www.cs.huji.ac.il/~dolev/pubs/thesis/msc-thesis-leo.pdf

Thu Mar 17 12:09:00 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Fixed two macro definitions.
	* test/ruby/enc/test_case_mapping.rb: Test cases that detected
	  the above bugs.

Thu Mar 17 11:36:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/option.c (inspect_tcpi_msec): more accurate condition
	  for TCPI msec member inspection function.
	  [ruby-core:74388] [Bug #12185]

Thu Mar 17 08:13:43 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* test/-ext-/time/test_new.rb (test_timespec_new): Time#gmtoff values